Fix horizontal scroll

--- a/app/styles/_portfolio.scss
+++ b/app/styles/_portfolio.scss
@@ -1,3 +1,7 @@
+html, body {
+  overflow-x: hidden;
+}
+
 body {
   background-color: $white;
 }
